# BioSeqDownloader

./: .gitignore  Dockerfile  README.md  download_activities.sh  environment.yml  pyproject.toml  results_example.json  setup.py  tests.ipynb
bioseq_dl/: __init__.py
bioseq_dl/cli/: __init__.py  blast_aligment.py  download_variants.py  gui.py  main.py  set_biogrid_key.py  uniprot_crossref.py  uniprot_search_ids.py  uniprot_search_query.py
bioseq_dl/constants/: biodbnet.py  databases.py  interpro.py  kegg.py  pathwaycommons.py  pubchem.py  reactome.py  refseq.py  stringdb.py
bioseq_dl/gui/: app.py  loaders.py  main_ui.py  registry.py  test.py
bioseqdownloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/alphafold/: default.yml
config/biodbnet/: fields.yml
config/biogrid/: default.yml
config/brenda/: fields.yml
config/chebi/: fields.yml
config/chembl/: fields.yml
config/genontology/: default.yml  fields.yml
config/interpro/: default.yml
config/kegg/: default.yml  fields.yml
examples/: download_activities.sh
scripts/: download.py  uniprot.py
src/: _child_db_base.py  aligment.py  alphafold.py  alphafold2.py  base.py  biodbnet.py  biogrid.py  brenda.py  chebi.py  chembl.py  constants.py  description_go.py  download.py  download_variants.py  genontology.py  interpro.py  kegg.py  panther.py  pathwaycommons.py  pride.py  proteindatabank.py  pubchem.py  reactome.py  refseq.py  rhea.py  stringdb.py  uniprot.py  uniprot_crossref.py  uniprot_search_ids.py  uniprot_search_query.py  utils.py
(+49 files in other folders)
